[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datavault"
version = "0.2.0"
description = "Local-first data asset manager — scan, classify, organize, report"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shangrila", email = "wutc@oasyce.com"}
]
keywords = ["data", "asset-management", "classification", "local-first", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
oasyce = ["oasyce>=0.9.0"]
test = ["pytest>=7.0"]

[project.scripts]
datavault = "datavault.cli:main"

[project.urls]
Homepage = "https://github.com/Shangri-la-0428/DataVault"

[tool.setuptools.packages.find]
where = ["."]
include = ["datavault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
